--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,4 +6,12 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
-   
+      - uses: actions/setup-go@v3
+        with:
+          go-version: '1.17'
+          cache: true
+     - run: go version
+     - name: Build it all
+       run: |
+         cd integration-tests
+         make build-go
