--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,12 @@ jobs:
         with:
           go-version: '1.12'
       - run: go version
+      - name: Install swagger
+        run: |
+          URL="https://github.com/go-swagger/go-swagger/releases/download/v0.25.0/swagger_linux_amd64"
+          curl -o "$HOME/.local/bin/swagger" -L'#' "$URL"
+          chmod +x "$HOME/.local/bin/swagger"
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
       - name: Build it all
         run: |
           cd integration-tests
