--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,20 +4,33 @@ jobs:
   Build:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out repository code
-        uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
           go-version: '1.12'
       - run: go version
-      - name: Install swagger
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v3
+        with:
+          path: go/src/github.com/j-white/gftn-services
+      - name: Install swagger cli
         run: |
           URL="https://github.com/go-swagger/go-swagger/releases/download/v0.25.0/swagger_linux_amd64"
           mkdir -p "$HOME/.local/bin"
           curl -o "$HOME/.local/bin/swagger" -L'#' "$URL"
           chmod +x "$HOME/.local/bin/swagger"
           echo "$HOME/.local/bin" >> $GITHUB_PATH
+      - name: Debug
+        run: |
+          pwd
+          echo ${HOME}
+          echo ${GITHUB_WORKSPACE}
+          echo ${GOPATH}
+          echo ${GOROOT}
+        env:
+          GOPATH: /home/runner/work/j-white/gftn-services
       - name: Build it all
+        env:
+          GOPATH: /home/runner/work/j-white/gftn-services
         run: |
           cd integration-tests
           make build-go
