--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -25,6 +25,10 @@
 #   unused-packages = true
 
 
+[[override]]
+  name = "bitbucket.org/ww/goautoneg"
+  source = "https://github.com/munnerz/goautoneg.git"
+
 [[constraint]]
   name = "github.com/go-errors/errors"
   version = "1.0.1"
